--- a/acl2019.bib
+++ b/acl2019.bib
@@ -1,10 +1,23 @@
-@inproceedings{dang2005overview,
+@inproceedings{,
 author = {Dang, Hoa Trang},
 booktitle = {Proceedings of the document understanding conference},
 doi = {10.1.1.184.2425},
 file = {:home/acp16hh/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Dang - Unknown - Overview of DUC 2005.pdf:pdf},
 isbn = {1932432795},
 mendeley-groups = {Experiments/Elly: Human Evaluation,Experiments/Elly: Human Evaluation/Common Practices,Report and Paper/ACL 2019 (old),Report and Paper/ACL 2019},
+pages = {1--12},
+title = {{Overview of DUC 2005}},
+url = {http://www.isi.edu/ http://portal.acm.org/citation.cfm?doid=1654679.1654689},
+volume = {2005},
+year = {2005}
+}
+@inproceedings{dang2005overview,
+author = {Dang, Hoa Trang},
+booktitle = {Proceedings of the Document Understanding Conference},
+doi = {10.1.1.184.2425},
+file = {:home/acp16hh/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Amplayo et al. - 2018 - Improving Abstraction in Text Summarization.pdf:pdf},
+isbn = {1932432795},
+mendeley-groups = {Experiments/Elly: Human Evaluation/Common Practices,Experiments/Elly: Human Evaluation},
 pages = {1--12},
 title = {{Overview of DUC 2005}},
 url = {http://www.isi.edu/ http://portal.acm.org/citation.cfm?doid=1654679.1654689},
