--- a/acl2019.tex
+++ b/acl2019.tex
@@ -25,8 +25,8 @@
 \graphicspath{ {./image/} }
 \hbadness=100000
 
-%\aclfinalcopy % Uncomment this line for the final submission
-%\def\aclpaperid{***} %  Enter the acl Paper ID here
+\aclfinalcopy % Uncomment this line for the final submission
+\def\aclpaperid{1816} %  Enter the acl Paper ID here
 
 %\setlength\titlebox{5cm}
 % You can expand the titlebox if you need extra space
@@ -63,16 +63,12 @@
 
 \title{\highres: Highlight-based Reference-less Evaluation of Summarization}
 
-\author{First Author \\
-  Affiliation / Address line 1 \\
-  Affiliation / Address line 2 \\
-  Affiliation / Address line 3 \\
-  \texttt{email@domain} \\\And
-  Second Author \\
-  Affiliation / Address line 1 \\
-  Affiliation / Address line 2 \\
-  Affiliation / Address line 3 \\
-  \texttt{email@domain} \\}
+\author{Hardy$^1$, Shashi Narayan$^2$, \textnormal{and} Andreas Vlachos$^3$ \\
+  Department of Computer Science, The University of Sheffield$^{1,3}$ \\
+  School of Informatics, University of Edinburgh$^{2}$\\
+  Google AI$^{2}$ \\
+  Department of Computer Science and Technology, University of Cambridge$^{3}$ \\
+  \texttt{hhardy2@sheffield.ac.uk}$^1$, \texttt{shashi.narayan@gmail.com}$^2$, \\ \texttt{av308@cam.ac.uk}$^3$ \\}
 
 \date{}
 
@@ -91,7 +87,7 @@
   There has been substantial progress in summarization research enabled by the availability of novel, often large-scale, datasets and recent advances on neural network-based approaches. 
   However, manual evaluation of the system generated summaries is inconsistent due to the difficulty the task poses to human non-expert readers.
   To address this issue, we propose a novel approach for manual evaluation,  \textsc{High}light-based \textsc{R}eference-less \textsc{E}valuation of \textsc{S}ummarization (\highres), in which summaries are assessed by multiple annotators against the source document via manually highlighted salient content in the latter. Thus summary assessment on the source document by human judges is facilitated,  while the highlights can be used for evaluating multiple systems.
-   To validate our approach we employ crowd-workers to augment with highlights a recently proposed dataset and compare two state-of-the-art systems. We demonstrate that \highres{} improves inter-annotator agreement in comparison to using the source document directly, while they help emphasize differences among systems that would be ignored under other evaluation approaches. 
+   To validate our approach we employ crowd-workers to augment with highlights a recently proposed dataset and compare two state-of-the-art systems. We demonstrate that \highres{} improves inter-annotator agreement in comparison to using the source document directly, while they help emphasize differences among systems that would be ignored under other evaluation approaches \footnote{Our dataset and code are available at \url{https://github.com/sheffieldnlp/highres}}.
 \end{abstract}
 
 % HighRRes: Highlight-based Reference-less Evaluation of Summarization
@@ -291,7 +287,7 @@ there should be no difficulties in identifying the referents of the noun phrases
 While fluency is often evaluated in recent work, clarity, while first introduced in DUC evaluations, has recently been ignored in manual evaluation, despite that it captures a different dimension of summarization quality.
 
 To ensure that the judgments for clarity and fluency are not affected by each other (poor fluency can affect clarity, but a summary can have perfect fluency but low clarity), % is no bias between clarity and fluency evaluation,
-we evaluate each metric separately. We ask the judges to evaluate multiple summaries per task with each dimension in its own screen. For sanity checking, we insert three fakes summary with different qualities (good, mediocre and bad summaries). We reject results that failed to pass this criteria: bad $<$ mediocre $<$ good.
+we evaluate each metric separately. We ask the judges to evaluate multiple summaries per task with each dimension in its own screen. For sanity checking, we insert three fake summary with different qualities (good, mediocre and bad summaries). We reject results where the numeric scores given by annotators failed to pass this criteria: bad $<$ mediocre $<$ good.
 
 \subsection{Highlight-based ROUGE Evaluation} 
 \label{subsec:hrouge}
@@ -316,14 +312,14 @@ The HROUGE scores for a summary $\mathcal{S}$ can then be defined as:
     \text{HR}_{\mathrm{rec}}^n &= \frac{\displaystyle\sum_{g \in n\operatorname{-gram}(\mathcal{S})} \beta_g^n\, \text{count}(g, \mathcal{D} \cap \mathcal{S})}{\displaystyle\sum_{g \in n\operatorname{-gram}(\mathcal{D})} \beta_g^n\,\text{count}(g, \mathcal{D})} \\
     \text{HR}_{\mathrm{pre}}^n &= \frac{\displaystyle\sum_{g \in n\operatorname{-gram}(\mathcal{S})} \beta_g^n\, \text{count}(g, \mathcal{D} \cap \mathcal{S})}{\displaystyle\sum_{g \in n\operatorname{-gram}(\mathcal{S})} \text{count}(g, \mathcal{S})}
 \end{align}
-\noindent $\text{HR}_{\mathrm{rec}}^n$ and $\text{HR}_{\mathrm{pre}}^n$ are the HROUGE recall and precision scores; $\text{count}(g, \mathcal{X})$ is the maximum number of $n$-gram $g$ occurring in the text $\mathcal{X}$. There is no weighting in the denominator of precision ($\beta_g^n = 1$) as if we weighted according to the highlights, words in the summary that are not highlighted in the original document would be ignored. This would result in $\text{HR}_{\mathrm{pre}}^n$ not penalizing summaries for containing words that are likely to be irrelevant as they do not appear in the highlights of the document.
+\noindent $\text{HR}_{\mathrm{rec}}^n$ and $\text{HR}_{\mathrm{pre}}^n$ are the HROUGE recall and precision scores; $\text{count}(g, \mathcal{X})$ is the maximum number of $n$-gram $g$ occurring in the text $\mathcal{X}$. The weight in the denominator of $\text{HR}_{\mathrm{pre}}^n$ is uniform ($\beta^n_g = 1$) for all $g$ because if we weighted according to the highlights, words in the summary that are not highlighted in the original document would be ignored. This would result in $\text{HR}_{\mathrm{pre}}^n$ not penalizing summaries for containing words that are likely to be irrelevant as they do not appear in the highlights of the document.
 %, any addition of junk words to the summary that doesn't appear in the highlight doesn't reduce the final precision. However, this would also limits the maximum precision to lower than 1 when there are multiple highlight annotations.
-It is important to note \hrouge{} has an important limitation in that it penalizes abstractive summaries that do not reuse words from the original document. This is similar to \rouge{} penalizing summaries for not reusing words from the reference summaries, however the highlights implicitly consider multiple references.  %produced with lower annotation effort.
+It is important to note \hrouge{} has an important limitation in that it penalizes abstractive summaries that do not reuse words from the original document. This is similar to \rouge{} penalizing summaries for not reusing words from the reference summaries, however the highlights allow us to implicitly consider multiple references without having to actually obtain them.  %produced with lower annotation effort.
 
 \section{Summarization Dataset and Models}
 \label{sec:data-models}
 
-We use the extreme summarization dataset \citep[\xsum,][]{narayan18xsum}\footnote{\url{https://github.com/EdinburghNLP/XSum}} which comprises BBC articles paired with their single-sentence summaries, provided by the journalists writing the articles. The summary in the \xsum\ dataset demonstrates a larger number of novel $n$-grams compared to other popular datasets such as CNN/DailyMail \citep{Hermann2015} or NY Times \citep{Sandhaus2008}. This makes the dataset suitable for our experiment since the more abstractive nature of the summary renders automatic methods such as ROUGE less accurate as they rely on string matching, and thus calls for human evaluation for more accurate system comparisons. 
+We use the extreme summarization dataset \citep[\xsum,][]{narayan18xsum}\footnote{\url{https://github.com/EdinburghNLP/XSum}} which comprises BBC articles paired with their single-sentence summaries, provided by the journalists writing the articles. The summary in the \xsum\ dataset demonstrates a larger number of novel $n$-grams compared to other popular datasets such as CNN/DailyMail \citep{Hermann2015} or NY Times \citep{Sandhaus2008} as such it is suitable to be used for our experiment since the more abstractive nature of the summary renders automatic methods such as ROUGE less accurate as they rely on string matching, and thus calls for human evaluation for more accurate system comparisons. 
 % This makes the dataset suitable for our experiment since we do not want the judges to be biased towards extractive methods which makes the process of assessment easier compared to the abstractive methods. In other words, we expect in an abstractive setting, the task of reading an article will be more laborious and prone to disagreement between judges.
 Following \citet{narayan18xsum}, we didn't use the whole test set portion, but sampled 50 articles from it for our highlight-based evaluation.  
 
@@ -368,7 +364,7 @@ On average, the union of the highlights from 10 annotators covered 38.21\% per a
 
 % as we filter out judges that did not read the whole article through sanity checking.
 
-Using Fleiss Kappa \citep{Josep1971} on the binary labels provided by each judge on each word (highlighted or not) we obtained an average agreement of 0.19 for the 50 articles considered. Article with the highest agreement (0.32) has more focused highlights, whereas the article with the lowest agreement (0.04) has highlights spread all over (both articles can be seen in the supplementary materials). Interestingly, the reference summary on the highest agreement article appears to be more informative of its content for which the annotator agreement is high; the reference summary on the lowest agreement article is more indicative, i.e., it describes the document rather than directly presenting the information it contains. These results confirms that the annotation behaviour originates from the nature of the document and the summary it requires, and validates our highlight annotation setup.
+Using Fleiss Kappa \citep{Josep1971} on the binary labels provided by each judge on each word (highlighted or not) we obtained an average agreement of 0.19 for the 50 articles considered. The low agreement score does not indicate a poor annotation process necessarily; we argue that this is primarily due to the annotators having different opinions on which parts of an article are salient. The article with the highest agreement (0.32) has more focused highlights, whereas the article with the lowest agreement (0.04) has highlights spread all over (both articles can be seen in the supplementary materials). Interestingly, the reference summary on the highest agreement article appears to be more informative of its content when the annotator agreement is high; the reference summary on the lowest agreement article is more indicative, i.e., it doesn’t contain any informative content from the article but only to inform the reader about the article’s topic and scope. These results confirms that the annotation behaviour originates from the nature of the document and the summary it requires, and validates our highlight annotation setup.
 
 % Figure~\ref{image:heatmap_both} shows the document (left) with the highest agreement of 0.32 and the document (right) with the lowest agreement is 0.04. As can be seen, the document with a high agreement tends to have more focused highlights, wheres the document with a low agreement has highlights spread all over. The document on the right in Figure~\ref{image:heatmap_both} simply presents a match report from Premiership and Championship games, it is hard for annotators to agree on which game to highlight. Interestingly, the reference summary on the left appears to be more informative of its content for which the annotator agreement is high; the reference summary on the right is more indicative, i.e., it describes the document rather than directly presenting the information it contains. These results confirms that the annotation behaviour originates from the nature of the document and the summary it requires, and validates our highlight annotation setup.
 
@@ -624,7 +620,20 @@ We believe that our highlight-based evaluation is an ideal setup of abstractive 
 In future work, we would like to extend our framework to other variants of summarization e.g.\  multi-document. Also, we will explore ways of automating parts of the process, e.g.\ the highlight annotation. Finally, the highlights could also be used as training signal, as it offers content saliency information at a finer level than the single reference typically used.
 
 %\shashi{Highlights for content selection signal, during training}
-% \section*{Acknowledgments}
+\begin{footnotesize}
+
+\section*{Acknowledgments}
+
+Hardy would like to thank the Indonesian government that
+has sponsored the first author’s studies through
+the Indonesia Endowment Fund for Education
+(LPDP). Shashi Narayan and Andreas Vlachos were supported by the
+EU H2020 SUMMA project (grant agreement
+number 688139). The latter is also supported by the EPSRC grant eNeMILP
+(EP/R021643/1).
+
+
+\end{footnotesize}
 
 % The acknowledgments should go immediately before the references.  Do
 % not number the acknowledgments section. Do not include this section
